--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
         </i></button>
         <h1>Compras da semana</h1>
     </header>
+
+    <main>
+        <section class="add-item">
+            <input type="text" placeholder="Adicione o novo item" id="item">
+            <button>Adicionar item</button>
+        </section>
+    </main>
 </body>
 </html>
