--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="./main.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +30,7 @@
     <main>
         <section class="add-item">
             <input type="text" placeholder="Adicione o novo item" id="item">
-            <button>Adicionar item</button>
+            <button onclick="addItem()">Adicionar item</button>
         </section>
 
         <section class="list">
