--- a/index.html
+++ b/index.html
@@ -33,52 +33,7 @@
             <button onclick="addItem()">Adicionar item</button>
         </section>
 
-        <section class="list">
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="list" id="item-1">
-
-                    <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="">
-                    </div>
-                    <label for="item-1">maça</label>
-                </div>
-
-                <button>
-                               <img src="./assets/trash-icon.svg" alt="">
-               </button>
-            </div>
-
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="list" id="item-2">
-
-                    <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="">
-                    </div>
-                    <label for="item-2">Melancia</label>
-                </div>
-
-                <button>
-                               <img src="./assets/trash-icon.svg" alt="">
-               </button>
-            </div>
-
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="list" id="item-3">
-
-                    <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="">
-                    </div>
-                    <label for="item-3">Morango</label>
-                </div>
-
-                <button>
-                               <img src="./assets/trash-icon.svg" alt="">
-               </button>
-            </div>
-        </section>
+        <section class="list"></section>
 
         <div class="hide-warning">
             <div>
